# aoc

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
.github/workflows/: build-caches.yml  test.yml
crates/aoc-update/: Cargo.toml
crates/aoc-update/src/: main.rs  output.rs
crates/aoc2015/: Cargo.toml  README.md
crates/aoc2015/src/: main.rs
crates/aoc2015/src/day01/: mod.rs
crates/aoc2015/src/day02/: mod.rs
crates/aoc2015/src/day03/: mod.rs
crates/aoc2022/: Cargo.toml  README.md
crates/aoc2022/src/: main.rs
crates/aoc2022/src/day01/: mod.rs
crates/aoc2022/src/day02/: mod.rs
crates/aoc2022/src/day03/: mod.rs
crates/aoc2022/src/day04/: mod.rs
crates/aoc2022/src/day05/: mod.rs
crates/aoc2022/src/day06/: mod.rs
crates/aoc2022/src/day07/: mod.rs
crates/aoc2022/src/day08/: mod.rs  square_grid.rs
crates/aoc2022/src/day09/: mod.rs
crates/aoc2023/: Cargo.toml  README.md
crates/aoc2023/src/: main.rs
crates/aoc2023/src/day01/: mod.rs
crates/aoc2023/src/day01alt/: mod.rs
crates/aoc2023/src/day02/: mod.rs
crates/aoc2023/src/day03/: mod.rs
crates/aoc2023/src/day04/: mod.rs
crates/aoc2023/src/day05/: mod.rs
crates/aoc2023/src/day06/: mod.rs
crates/aoc2023/src/day07/: mod.rs
crates/aoc2023/src/day08/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: bench_size.rs  benchmark.rs  lib.rs  problem.rs  solution.rs
