[workspace]
resolver = "2"
members = [
    "crates/aoc-update",
    "crates/common",
    "crates/aoc2015",
    "crates/aoc2022",
    "crates/aoc2023"
]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.release-profile]
inherits = "release"
debug = true

[profile.release-small]
inherits = "release"
opt-level = "z"