[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human-repr = "1.1.0"
humansize = "2.1.3"
os_info = "3.7.0"
raw-cpuid = "11.0.1"
sysinfo = "0.29.10"
time = { version = "0.3.29", features = ["formatting"] }
